# fr3-docker

./: Dockerfile  Dockerfile.cuda  README.md  docker-compose-cuda.yml  docker-compose.yml  packages.txt  requirements.txt
franka_ws/src/franka_bringup/: CMakeLists.txt
franka_ws/src/franka_bringup/config/: franka.config.yaml
franka_ws/src/franka_bringup/launch/: franka.launch.py
franka_ws/src/franka_bringup/src/: go_to_zero.py
scripts/: enable_fci.py  franka_entrypoint.sh  test_startup.py
